--- a/src/envoy-proxy/config/envoy.yaml
+++ b/src/envoy-proxy/config/envoy.yaml
@@ -1,14 +1,16 @@
 node:
   id: id_1
-  cluster: main
+  cluster: grpc-json
+
 admin:
-  access_log_path: /tmp/envoy_admin_access.log
+  access_log_path: "/dev/null"
   address:
     socket_address:
       address: 0.0.0.0
-      port_value: "9901"
+      port_value: 9901
+
 dynamic_resources:
   cds_config:
-    path: /etc/envoy/cds.yaml
+    path: "/etc/envoy/cds.conf"
   lds_config:
-    path: /etc/envoy/lds.yaml
+    path: "/etc/envoy/lds.conf"
