service name fixed

--- a/src/envoy-proxy/config/lds.conf
+++ b/src/envoy-proxy/config/lds.conf
@@ -46,7 +46,7 @@
                                             "@type": "type.googleapis.com/envoy.extensions.filters.http.grpc_json_transcoder.v3.GrpcJsonTranscoder",
                                             "proto_descriptor": "/desc/helloworld.pb",
                                             "services": [
-                                                "helloworld.Greeterr"
+                                                "helloworld.HelloService"
                                             ],
                                             "print_options": {
                                                 "add_whitespace": "true",
